[package]
name = "stter"
version = "0.1.0"
authors = ["Yuval yuvalande@gmail.com"]
license = "MIT"
description = "A CLI tool to search pdf files for text in both Hebrew and English"
readme = "README.md"
homepage = "https://github.com/Yubkush/Stutter"
repository = "https://github.com/Yubkush/Stutter"
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pdf-extract = "0.6.4"
clap = {version = "4.0", features = ["derive"]}
